Remove Clang bug work-around

The issue was fixed in Clang r313905, which we rolled past in #508804.

TBR=zentaro

Bug: 769759
Change-Id: Id6af77871f3696c5d54fa5b9bedc528479096c0b
Reviewed-on: https://chromium-review.googlesource.com/724231
Reviewed-by: Hans Wennborg <hans@chromium.org>
Reviewed-by: Asanka Herath <asanka@chromium.org>
Commit-Queue: Hans Wennborg <hans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509873}
Former-commit-id: 783030e101ab75c46ce04d15992ff9a33ffe8f6c